Scope2D will now automatically open the last open scene

--- a/source/ressource/config.css
+++ b/source/ressource/config.css
@@ -1,4 +1,1 @@
-Config {
-	gfxdir:data/graphics/;
-	mapdir:data/scenes/;
-}
+Config{LastOpen:/Users/markus/Developer/Projects/Scope 2D/data/scenes/hoodie/lv1.css;gfxdir:data/graphics/;mapdir:data/scenes/;}
